# qwen3vl-captioner

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  run.bat  setup.bat
.github/workflows/: codeql.yml
engine/: __init__.py  inference.py  model_downloader.py
gui/: __init__.py  app_settings_dialog.py  caption_panel.py  config.py  dataset_panel.py  file_browser.py  image_viewer.py  main_window.py  model_download_manager.py  notification_panel.py  settings_panel.py  theme.py
